# prediction-market

./: Anchor.toml  BUILD.md  Cargo.toml  README.md  package.json
docs/: market-mechanics-and-ux-options.md
patches/: @coral-xyz+anchor+0.31.1.patch
programs/prediction_market/: Cargo.toml
programs/prediction_market/src/: add_allowed_collateral_mint.rs  close_market_early.rs  close_user_profile.rs  create_market.rs  create_market_category.rs  errors.rs  fees.rs  finalize_resolution.rs  initialize_config.rs  initialize_market_mints.rs  initialize_market_resolver.rs  initialize_market_resolvers.rs  initialize_parimutuel_state.rs  lib.rs  mint_complete_set.rs  parimutuel_claim.rs  parimutuel_stake.rs  parimutuel_withdraw.rs  redeem_complete_set.rs  redeem_winning.rs  remove_allowed_collateral_mint.rs  revoke_resolution_vote.rs  update_config.rs  update_market_category.rs  upsert_user_profile.rs  verify_user_profile.rs  void_market.rs  vote_resolution.rs
programs/prediction_market/src/state/: allowed_mint.rs  global_config.rs  market.rs  market_category.rs  market_type.rs  mod.rs  outcome_tally.rs  parimutuel_position.rs  parimutuel_state.rs  resolution_vote.rs  resolver.rs  user_profile.rs
programs/prediction_market/src/utils/: mod.rs  token_transfer.rs
scripts/: collateral-script-env.ts  create-test-collateral-spl-token.ts  create-test-collateral-token2022.ts  create-test-usdc.ts  mint-test-collateral-spl-token.ts  mint-test-collateral-token2022.ts  mint-test-usdc.ts
tests/: edge-cases.ts  parimutuel.ts  prediction_market.ts  test-helpers.ts  user-profile.ts
(+61 files in other folders)
