[package]
name = "prediction_market"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction_market"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

# Anchor proc-macros emit cfgs (`anchor-debug`, etc.) that stable `check-cfg` does not know; silence noise.
[lints.rust]
unexpected_cfgs = "allow"

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
spl-token = "7"

